--- a/main_app/static/css/style.css
+++ b/main_app/static/css/style.css
@@ -4,11 +4,23 @@ body {
     flex-direction: column;
   }
   
-  main {
-    flex: 1 0 auto;
-  }
-  
-  footer.page-footer {
-    padding-top: 0;
-    text-align: right;
-  }
+main {
+flex: 1 0 auto;
+}
+
+footer.page-footer {
+padding-top: 0;
+text-align: right;
+}
+
+.nav-wrapper, .page-footer{
+    text-shadow: 0 0 5px black;
+    background-color: rgb(123, 255, 123) !important;
+} 
+h1{
+    text-align: center;
+}
+
+#about{
+    text-align: center;
+}
