--- a/main_app/templates/base.html
+++ b/main_app/templates/base.html
@@ -14,10 +14,10 @@
     <nav>
       <div class="nav-wrapper">
         <ul>
-          <li><a href="/" class="left brand-logo">&nbsp;&nbsp;CatCollector</a></li>
+          <li><a href="/" class="left brand-logo">&nbsp;&nbsp;Dog Collector</a></li>
         </ul>
         <ul class="right">
-          <li><a href="/cats">View All My Dogs</a></li>
+          <li><a href="/dogs">View All My Dogs</a></li>
           <li><a href="/about">About</a></li>
         </ul>
       </div>
@@ -28,7 +28,7 @@
     {% endblock %}
   </main>
   <footer class="page-footer">
-    <div class="right">All Rights Reserved, &copy; 2019 Cat Collector &nbsp;</div>
+    <div class="right">All Rights Reserved, &copy; 2019 Dog Collector &nbsp;</div>
   </footer>
 </body>
 </html>
