--- a/main_app/templates/about.html
+++ b/main_app/templates/about.html
@@ -6,6 +6,6 @@
 <br>
 <hr />
 <br><br><br>
-<p>Dog collector is a place where I can talk about all the dogs I own and have owned. <br> Each of them is special to me and I never want to forget them.</p>
+<p id="about">Dog collector is a place where I can talk about all the dogs I own and have owned. <br> Each of them is special to me and I never want to forget them.</p>
 {% endblock content %}
     
