--- a/main_app/templates/dogs/index.html
+++ b/main_app/templates/dogs/index.html
@@ -1,7 +1,7 @@
 {% extends 'base.html' %}
 {% block content %}
 
-<h1>Dog List</h1>
+<h1>The Dog Park</h1>
 
 {% for d in dogs %}
   <div class="card">
