--- a/main_app/templates/dogs/index.html
+++ b/main_app/templates/dogs/index.html
@@ -4,7 +4,7 @@
 <h1>The Dog Park</h1>
 
 {% for d in dogs %}
-<a href="{% url 'dog_detail' dog.id}">
+<a href="{% url 'dogs_detail' d.id %}">
   <div class="card">
     <div class="card-content">
       <span class="card-title">{{ d.name }}</span>
