--- a/main_app/templates/base.html
+++ b/main_app/templates/base.html
@@ -18,6 +18,7 @@
         </ul>
         <ul class="right">
           <li><a href="/dogs">View All My Dogs</a></li>
+          <li><a href="{% url 'dogs_create' %}">Add a Doggo</a></li>
           <li><a href="/about">About</a></li>
         </ul>
       </div>
