--- a/main_app/templates/dogs/detail.html
+++ b/main_app/templates/dogs/detail.html
@@ -16,4 +16,9 @@
   </div>
 </div>
 
+<div class="card-action">
+	<a href="{% url 'dogs_update' dog.id%}">Edit</a>
+	<a href="{% url 'dogs_delete' dog.id%}">Delete</a>
+</div>
+
 {% endblock %}
