--- a/main_app/templates/dogs/detail.html
+++ b/main_app/templates/dogs/detail.html
@@ -3,22 +3,44 @@
 
 <h1>Dog Details</h1>
 
-<div class="card">
-  <div class="card-content">
-    <span class="card-title">{{ dog.name }}</span>
-    <p>Breed: {{ dog.breed }}</p>
-    <p>Description: {{ dog.description }}</p>
-    {% if dog.age > 0 %}
-      <p>Age: {{ dog.age }}</p>
-    {% else %}
-      <p>Age: Puppy</p>
-    {% endif %}
+<div class="row">
+  <div class="col s6">
+    <div class="card">
+      <div class="card-content">
+        <span class="card-title">{{ dog.name }}</span>
+        <p>Breed: {{ dog.breed }}</p>
+        <p>Description: {{ dog.description }}</p>
+        {% if dog.age > 0 %}
+          <p>Age: {{ dog.age }}</p>
+        {% else %}
+          <p>Age: Puppy</p>
+        {% endif %}
+      </div>
+      <div class="card-action">
+        <a href="{% url 'dogs_update' dog.id %}">Edit</a>
+        <a href="{% url 'dogs_delete' dog.id %}">Delete</a>
+      </div>
+    </div>
+  </div>
+  <div class="col s6">
+    <form action="{% url 'add_exercise' dog.id %}" method="POST">
+      {% csrf_token %}
+      {{ form.as_p }}
+      <input type="submit" class="btn" value="Add Exercise">
+    </form>
+    <table class="striped">
+      <thead>
+        <tr><th>Date</th><th>Exercise</th></tr>
+      </thead>
+      <tbody>
+        {% for exercise in dog.exercise_set.all %}
+          <tr>
+            <td>{{exercise.date}}</td>
+            <td>{{exercise}}</td>
+          </tr>
+        {% endfor %}
+      </tbody>
+    </table>
   </div>
 </div>
-
-<div class="card-action">
-	<a href="{% url 'dogs_update' dog.id%}">Edit</a>
-	<a href="{% url 'dogs_delete' dog.id%}">Delete</a>
-</div>
-
 {% endblock %}
