fix import on views

--- a/main_app/templates/dogs/detail.html
+++ b/main_app/templates/dogs/detail.html
@@ -82,7 +82,7 @@
 		</div>
 		{% endfor %}
 		{% else %}
-		<h5>{{cat.name}} Already Has All Toys Available</h5>
+		<h5>{{dog.name}} Already Has All Toys Available</h5>
 		{% endif %}
 	</div>
 </div>
