--- a/main_app/templates/base.html
+++ b/main_app/templates/base.html
@@ -20,6 +20,8 @@
         <ul class="right">
           <li><a href="/dogs">View All My Dogs</a></li>
           <li><a href="{% url 'dogs_create' %}">Add a Doggo</a></li>
+          <li><a href="{% url 'toys_create' %}">Add a Toy</a></li>
+					<li><a href="{% url 'toys_index' %}">View All Toys</a></li>
           <li><a href="/about">About</a></li>
         </ul>
       </div>
